WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51682
[chromium] Tiled compositor crash after recovering from lost GPU process
https://bugs.webkit.org/show_bug.cgi?id=51682
Summary
[chromium] Tiled compositor crash after recovering from lost GPU process
Adrienne Walker
Reported
2010-12-28 10:12:57 PST
From
http://crbug.com/68151
: 1. Go to
http://webkit.org/blog/386/3d-transforms/
with the compositor enabled and scroll down a bit. 2. From the task manager kill the GPU process. 3. Move the mouse cursor in the window to trigger redraw. This appears to be due to the fact that the layer is not being resized properly after the GPU process recovers and there's an assertion on an out-of-range indexing operation.
Attachments
Patch
(1.80 KB, patch)
2010-12-28 10:31 PST
,
Adrienne Walker
no flags
Details
Formatted Diff
Diff
Patch
(1.79 KB, patch)
2010-12-28 11:47 PST
,
Adrienne Walker
no flags
Details
Formatted Diff
Diff
Ignore, wrong upload
(55.43 KB, patch)
2011-08-09 15:11 PDT
,
Abhishek Arya
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Adrienne Walker
Comment 1
2010-12-28 10:31:01 PST
Created
attachment 77560
[details]
Patch
Kenneth Russell
Comment 2
2010-12-28 11:21:58 PST
Comment on
attachment 77560
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=77560&action=review
> WebCore/platform/graphics/chromium/LayerTilerChromium.cpp:402 > + IntSize newSize(std::max(m_layerSize.width(), layerRect.right()), > + std::max(m_layerSize.height(), layerRect.bottom()));
Could you use a preexisting method on IntSize to compute this? For example IntSize::expandedTo()?
Adrienne Walker
Comment 3
2010-12-28 11:47:30 PST
Created
attachment 77568
[details]
Patch
Adrienne Walker
Comment 4
2010-12-28 11:48:14 PST
(In reply to
comment #2
)
> (From update of
attachment 77560
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=77560&action=review
> > > WebCore/platform/graphics/chromium/LayerTilerChromium.cpp:402 > > + IntSize newSize(std::max(m_layerSize.width(), layerRect.right()), > > + std::max(m_layerSize.height(), layerRect.bottom())); > > Could you use a preexisting method on IntSize to compute this? For example IntSize::expandedTo()?
Good point.
Kenneth Russell
Comment 5
2010-12-28 12:57:12 PST
Comment on
attachment 77568
[details]
Patch Looks good.
WebKit Commit Bot
Comment 6
2010-12-28 13:54:07 PST
Comment on
attachment 77568
[details]
Patch Clearing flags on attachment: 77568 Committed
r74722
: <
http://trac.webkit.org/changeset/74722
>
WebKit Commit Bot
Comment 7
2010-12-28 13:54:12 PST
All reviewed patches have been landed. Closing bug.
Abhishek Arya
Comment 8
2011-08-09 15:11:46 PDT
Created
attachment 103405
[details]
Ignore, wrong upload
Abhishek Arya
Comment 9
2011-08-09 15:12:55 PDT
sorry, wrong upload, please ignore.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug