2010-12-28  Adrienne Walker  <enne@google.com>

Reviewed by Kenneth Russell.

        [chromium] Fix tiled compositor assertion after GPU process recovery.
        https://bugs.webkit.org/show_bug.cgi?id=51682

        After the GPU process recovers, the layer size is set to IntSize(),
        but IntRect::unite() has a special case for empty rects.  This
        behavior was causing the layer size to be too small, causing an
        out-of-bounds array access elsewhere.

        No new tests.

        * platform/graphics/chromium/LayerTilerChromium.cpp:
        (WebCore::LayerTilerChromium::growLayerToContain):

Canonical link: https://commits.webkit.org/65061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74722 268f45cc-cd09-0410-ab3c-d52691b4dbfc